Updated styles and fixed error with spacing

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,7 +14,7 @@
  *= require_tree .
  *= require_self
  */
- @import "bootstrap";
+//  @import "bootstrap";
 
  
 
@@ -30,11 +30,11 @@ html {
 
 body {
  	height: 100%;
-	 background: -webkit-linear-gradient(360deg, #172E37 10%, #85CEC1 90%);
-	 background:    -moz-linear-gradient(360deg, #172E37 10%, #85CEC1 90%);
-	 background:     -ms-linear-gradient(360deg, #172E37 10%, #85CEC1 90%);
-	 background:      -o-linear-gradient(360deg, #172E37 10%, #85CEC1 90%);
-	 background:         linear-gradient(360deg, #172E37 10%, #85CEC1 90%);
+	 background: -webkit-linear-gradient(360deg, #F7B94C 10%, #85CEC1 90%);
+	 background:    -moz-linear-gradient(360deg, #F7B94C 10%, #85CEC1 90%);
+	 background:     -ms-linear-gradient(360deg, #F7B94C 10%, #85CEC1 90%);
+	 background:      -o-linear-gradient(360deg, #F7B94C 10%, #85CEC1 90%);
+	 background:         linear-gradient(360deg, #F7B94C 10%, #85CEC1 90%);
   font-family: 'Roboto Condensed', sans-serif;
 }
 
@@ -72,7 +72,7 @@ body {
 
 .todo_list_title {
 	text-align: center;
-	font-weight: 600;
+	font-weight: 700;
 	font-size: 2.5rem;
 	text-transform: uppercase;
 	color: white;
